objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>AutoRABIT Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Convert</fullName>
        </values>
        <values>
            <fullName>DNC</fullName>
        </values>
        <values>
            <fullName>Demo Performed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Scheduled Demo</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Techsophy lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>DNC</fullName>
        </values>
        <values>
            <fullName>Demo Performed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Ops Consulting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Champ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallFire_Notes__c</fullName>
        <description>Shows customers&apos; comments while being contacted</description>
        <label>CallFire Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <description>Shows No of Employees. Replaced &quot; No of Employees field&quot; to access special characters as well.</description>
        <label>Company Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <description>Field to add company&apos;s website.</description>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>Select the competitor</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Copado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flosum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitterbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odaseva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gearset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssureClick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Cascade &amp; others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Bamboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CompleteLeadURL__c</fullName>
        <formula>&quot;https://na43.salesforce.com/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompleteLeadURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_since_Create__c</fullName>
        <formula>TODAY() - datevalue(CreatedDate)</formula>
        <inlineHelpText>Days since the Lead has been created</inlineHelpText>
        <label>Days since Create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Convert__c</fullName>
        <description>Time taken to convert the Lead</description>
        <formula>ConvertedDate - DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days to Convert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <inlineHelpText>Full name of the Lead</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <description>Infrastructure preference</description>
        <label>Infrastructure</label>
        <picklist>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSourceCandidate_Name__c</fullName>
        <label>LeadSourceCandidate Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource_Skill__c</fullName>
        <label>LeadSource Skill</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>LE-{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>App Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Tour 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY Tour 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>No_of_Attachments__c</fullName>
        <label>No.of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <label>No.of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <label>Record Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recordtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <label>Secondary Lead Source</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>Enter the Time Zone of the client  (Ex: EST, PST, IST etc.)</inlineHelpText>
        <label>Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AutoRABIT_Open_Leads</fullName>
        <booleanFilter>(1 or 3) and 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.AutoRABIT_RecordType</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Qualified,Contacted,Scheduled Demo,Demo Performed</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>AutoRABIT</value>
        </filters>
        <label>AutoRABIT Open Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>BPM Services</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <label>BPM Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ColdCalls</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Qualified,Contacted,Unresponsive,Lost,DNC,Unqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Navneeth</value>
        </filters>
        <label>ColdCalls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Consulting_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pavan</value>
        </filters>
        <label>Consulting Leads</label>
        <sharedTo>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emerging_Technologies</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Emerging_Technologies_Record_Type</value>
        </filters>
        <label>Emerging Technologies</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gary_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Gary</value>
        </filters>
        <filters>
            <field>LeadType__c</field>
            <operation>equals</operation>
            <value>Self Generated</value>
        </filters>
        <label>Gary&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Londor_Tour_17_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Source_Type__c</field>
            <operation>equals</operation>
            <value>London Tour 17</value>
        </filters>
        <label>Londor Tour 17 Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Migile_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Migile_Record_Type</value>
        </filters>
        <label>Migile Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Abhilash</value>
        </filters>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Social_Champ_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Social_Champ</value>
        </filters>
        <label>Social Champ Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AutoRABIT_RecordType</fullName>
        <active>true</active>
        <businessProcess>AutoRABIT Lead Process</businessProcess>
        <description>This record type defines Business Unit AutoRABIT</description>
        <label>AutoRABIT RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPM_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit  types related to BPM Services</description>
        <label>BPM Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit types for Consulting</description>
        <label>Consulting Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emerging_Technologies_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <label>Emerging Technologies Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migile_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit type for Migile</description>
        <label>Migile Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Champ</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <label>Social Champ Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>Address_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>City  = Null ||  State = Null</errorConditionFormula>
        <errorMessage>test validation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Competitor_is_Others_Specify_it</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(Competitor__c,&quot;Others&quot;),Other_Competitors__c==null,false)</errorConditionFormula>
        <errorDisplayField>Other_Competitors__c</errorDisplayField>
        <errorMessage>Other_Competitors__c field cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Contact</fullName>
        <active>false</active>
        <description>When your &apos;Lead source&apos; is SFDC Referral or External Referral or Partner, then you need to choose the respective Lead source contact</description>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( LeadSource,&apos;SFDC Referral&apos;), 
ISPICKVAL( LeadSource,&apos;External Referral&apos;), 
ISPICKVAL( LeadSource,&apos;Partner&apos;), 
ISBLANK(Lead_Source_Contact__c)))</errorConditionFormula>
        <errorDisplayField>Lead_Source_Contact__c</errorDisplayField>
        <errorMessage>Enter &apos;Lead Source Contact&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Lead_Conversion</fullName>
        <active>false</active>
        <description>This validation rule is to check if there are no attachments on conversion</description>
        <errorConditionFormula>AND( IsConverted ,  (ISBLANK(No_of_Attachments__c) || No_of_Attachments__c &lt;=0))</errorConditionFormula>
        <errorMessage>Please attach the necessary document and convert the Lead</errorMessage>
    </validationRules>
</CustomObject>